# pic_simulator

./: .gitignore  Cargo.toml  README.md  ROUTINE.md  test.asm
examples/: gpio_demo.rs  hexloader_demo.rs  interrupt_demo.rs  sleep_wdt_demo.rs  timer_demo.rs
src/: cli.rs  cpu.rs  debugger.rs  executor.rs  gpio.rs  hexloader.rs  instruction.rs  interrupt.rs  lib.rs  main.rs  memory.rs  simulator.rs  timer.rs  wdt.rs
src/gui/: app.rs  mod.rs
